# meeting-summarizer

./: .gitignore  drive_client.py  meeting_pipeline.py  pyproject.toml  transcribe_and_summarize.py
drive-test/: main.py
